bk_ida/gobmkida/c3/is_ko
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_ko/src/engine/board.c:3002:24: error: use of undeclared identifier 'byte_9C689F'
v9 = ( unsigned __int8)byte_9C689F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_ko/src/engine/board.c:3016:25: error: use of undeclared identifier 'byte_9C688C'
v10 = ( unsigned __int8)byte_9C688C[pos]; 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/is_ko/src/obj/1/board.o] Error 1
